--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,10 +61,9 @@ jobs:
           zip -qry ../ciout/extra_${TODAY}.zip * || exit 1
           cd ..
           git show -s --format="%s" > release_notes.md
-          echo "Refer to https://forum.umineko-project.org for more details." >> release_notes.md
 
       - name: Release
-        if: github.repository_owner == 'umineko-project'
+        if: github.repository_owner == 'Pteryon'
         id: create_release
         uses: actions/create-release@v1
         env:
@@ -77,7 +76,7 @@ jobs:
           prerelease: false
 
       - name: Upload Main
-        if: github.repository_owner == 'umineko-project'
+        if: github.repository_owner == 'Pteryon'
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -87,41 +86,8 @@ jobs:
           asset_name: umineko-main-scripts_r${{ env.BUILD }}.zip
           asset_content_type: application/zip
 
-      - name: Upload Main (dev)
-        if: github.repository_owner == 'umineko-project'
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./ciout/umineko-main-scripts_r${{ env.BUILD }}_dev.zip
-          asset_name: umineko-main-scripts_r${{ env.BUILD }}_dev.zip
-          asset_content_type: application/zip
-
-      - name: Upload PT
-        if: github.repository_owner == 'umineko-project'
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./ciout/umineko-pt-scripts_r${{ env.BUILD }}.zip
-          asset_name: umineko-pt-scripts_r${{ env.BUILD }}.zip
-          asset_content_type: application/zip
-
-      - name: Upload PT (dev)
-        if: github.repository_owner == 'umineko-project'
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./ciout/umineko-pt-scripts_r${{ env.BUILD }}_dev.zip
-          asset_name: umineko-pt-scripts_r${{ env.BUILD }}_dev.zip
-          asset_content_type: application/zip
-
       - name: Upload WH
-        if: github.repository_owner == 'umineko-project'
+        if: github.repository_owner == 'Pteryon'
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -129,15 +95,4 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./ciout/umineko-wh-scripts_r${{ env.BUILD }}.zip
           asset_name: umineko-wh-scripts_r${{ env.BUILD }}.zip
-          asset_content_type: application/zip
-
-      - name: Upload WH (dev)
-        if: github.repository_owner == 'umineko-project'
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./ciout/umineko-wh-scripts_r${{ env.BUILD }}_dev.zip
-          asset_name: umineko-wh-scripts_r${{ env.BUILD }}_dev.zip
           asset_content_type: application/zip
